tests/workflow/errors/e.workflow

# E. Reference to not exist struct (self)

&config {
   SelfKey: NotExistStruct;
   AssignedKey: StructC;
   Producer: rust;
   Consumer: rust;
}

StructA !StructE {
   (CaseB    > StructB)    > StructD;
                           > StructF;
   (CaseC    > StructC);
   (CaseD    > StructD)    > StructJ;
}
